--- a/roles/sorttv/templates/sorttv.conf.j2
+++ b/roles/sorttv/templates/sorttv.conf.j2
@@ -59,21 +59,21 @@ ignore=*.torrent
 ignore=*sample*
 ignore=*.part
 # don't sort compressed files, their contents will be extracted and sorted
-ignore=*.rar
-ignore=*.zip
-ignore=*.7z
-ignore=*.gz
-ignore=*.bz2
-ignore=*.r0*
-ignore=*.r1*
-ignore=*.r2*
-ignore=*.r3*
-ignore=*.r4*
-ignore=*.r5*
-ignore=*.r6*
-ignore=*.r7*
-ignore=*.r8*
-ignore=*.r9*
+#ignore=*.rar
+#ignore=*.zip
+#ignore=*.7z
+#ignore=*.gz
+#ignore=*.bz2
+#ignore=*.r0*
+#ignore=*.r1*
+#ignore=*.r2*
+#ignore=*.r3*
+#ignore=*.r4*
+#ignore=*.r5*
+#ignore=*.r6*
+#ignore=*.r7*
+#ignore=*.r8*
+#ignore=*.r9*
 
 # OPTIONAL - delete the file from the source directory, if the file matches one of these
 # Note: this is applied after an attempt has been made to extract any archives
@@ -83,6 +83,19 @@ delete:read me
 delete:*.nfo
 delete=*.rar
 delete=*.zip
+delete=*.7z
+delete=*.gz
+delete=*.bz2
+delete=*.r0*
+delete=*.r1*
+delete=*.r2*
+delete=*.r3*
+delete=*.r4*
+delete=*.r5*
+delete=*.r6*
+delete=*.r7*
+delete=*.r8*
+delete=*.r9*
 
 # OPTIONAL - consider the file extension before treating certain files as movies or TV episodes
 # Recommended: SortTV is aware of a large number of extensions, and this can avoid many false matches
