--- a/roles/transmission/templates/settings.json.j2
+++ b/roles/transmission/templates/settings.json.j2
@@ -6,7 +6,7 @@
     "alt-speed-time-enabled": false,
     "alt-speed-time-end": 1020,
     "alt-speed-up": 50,
-    "bind-address-ipv4": "192.168.1.202",
+    "bind-address-ipv4": "{{ ansible_default_ipv4.address }}",
     "bind-address-ipv6": "::",
     "blocklist-enabled": false,
     "blocklist-url": "http://www.example.com/blocklist",
@@ -41,12 +41,12 @@
     "ratio-limit-enabled": true,
     "rename-partial-files": true,
     "rpc-authentication-required": true,
-    "rpc-bind-address": "192.168.1.202",
+    "rpc-bind-address": "{{ ansible_default_ipv4.address }}",
     "rpc-enabled": true,
-    "rpc-password": "{{ transmission_password }}",
-    "rpc-port": 9091,
+    "rpc-password": "{{ trasnmission_pass }}",
+    "rpc-port": {{ transmission_port }},
     "rpc-url": "/transmission/",
-    "rpc-username": "bobo",
+    "rpc-username": "{{ transmission_user }}",
     "rpc-whitelist": "127.0.0.1",
     "rpc-whitelist-enabled": false,
     "scrape-paused-torrents-enabled": true,
